Migrated tasks to gameplay abilities

--- a/souk_scene.uproject
+++ b/souk_scene.uproject
@@ -9,7 +9,12 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine"
+				"Engine",
+				"GameplayAbilities",
+				"CoreUObject",
+				"AIModule",
+				"GameplayBehaviorsModule",
+				"GameplayTags"
 			]
 		}
 	],
@@ -20,6 +25,10 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
